--- a/package.json
+++ b/package.json
@@ -7,15 +7,18 @@
     "node-sass": "^4.11.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-redux": "^7.0.2",
     "react-router-dom": "^4.4.0",
     "react-scripts": "2.1.8",
+    "redux-form": "^8.2.0",
     "redux-starter-kit": "^0.4.3",
+    "redux-thunk": "^2.3.0",
     "travis": "^0.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
