--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "react-redux": "^7.0.2",
     "react-router-dom": "^4.4.0",
     "react-scripts": "2.1.8",
+    "redux": "^4.0.1",
     "redux-form": "^8.2.0",
     "redux-starter-kit": "^0.4.3",
-    "redux-thunk": "^2.3.0",
-    "travis": "^0.1.1"
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
