--- a/package.json
+++ b/package.json
@@ -2,17 +2,17 @@
   "name": "community-story",
   "version": "0.1.0",
   "private": true,
+  "devDependencies": {
+    "react-scripts": "2.1.8"
+  },
   "dependencies": {
     "jwt-decode": "^2.2.0",
-    "node-sass": "^4.11.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-redux": "^7.0.2",
     "react-router-dom": "^4.4.0",
-    "react-scripts": "2.1.8",
     "redux": "^4.0.1",
     "redux-form": "^8.2.0",
-    "redux-starter-kit": "^0.4.3",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
